<resources>
    <string name="app_name">TrailBook</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="ringtones_cat">Ringtone Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warn_path_unfinished">This action will terminate the current path and start a new one.  Are you sure you want to start a new path?</string>
    <string name="confirm_new_path_title">Confirm New Path</string>
    <string name="cancel_new_path">Cancel</string>
    <string name="ok_new_path">New Path</string>
    <string name="new_path_dialog_title">New Path</string>
    <string name="cpd_new_path">Create</string>
    <string name="cpd_cancel">Cancel</string>
    <string name="cpd_title">New Path</string>
    <string name="trailNotesHint">Write notes here.</string>
    <string name="climb_name_hint"></string>
    <string name="cn_ok">Save</string>
    <string name="cn_cancel">Cancel</string>
    <string name="create_note">Add Note</string>
    <string name="take_picture">Take Picture</string>
    <string name="general_settings">General Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="upload_user_name">User Id</string>
    <string name="upload_user_name_summary">User name to default for path upload.</string>
    <string name="uom">Unit Of Measure</string>
    <string name="uom_summary">Unit of measure for display.</string>
    <string name="enable_prox_alert_1">Play Alert 1</string>
    <string name="enable_prox_alert_summary_1">Sound an alert when in the general vicinity of a note.</string>
    <string name="ringtone_1">Ringtone to sound when in the general vicinity of a note.</string>
    <string name="ringtone_title_1">Select Ringtone Vicinity</string>
    <string name="enable_prox_alert_2">Enable Approaching Note Alert</string>
    <string name="enable_prox_alert_summary_2">Sound an alert when getting close to a note</string>
    <string name="ringtone_2">Ringtone to sound when close to a note.</string>
    <string name="ringtone_title_2">Approaching Note Ringtone</string>
    <string name="auto_play">Auto Play</string>
    <string name="auto_play_summary">Auto play audio notes when approaching.</string>
    <string name="auto_play_radius">Auto Play Radius</string>
    <string name="auto_play_radius_summary">Distance at which to auto play audio notes (ft/meters).</string>
    <string name="enable_offroute_alert">Enable Off Route Alert</string>
    <string name="off_route_alert">Off Route Ringtone</string>
    <string name="off_route_ringtone_summary">Ringtone to sound when off route.</string>
    <string name="off_route_distance">Off Route Trigger Distance</string>
    <string name="off_route_distance_summary">Distance off route at which to sound an alert (ft/meters).</string>
    <string name="battery_settings">Battery Settings</string>
    <string name="polling_frequency_high">Polling Frequencey High</string>
    <string name="polling_frequency_high_summary">Interval (seconds) to poll location data in high accuracy mode.</string>
    <string name="polling_frequency_medium">Polling Frequencey Medium</string>
    <string name="polling_frequency_medium_summary">Interval (seconds) to poll location data in medium accuracy mode.</string>
    <string name="polling_frequency_low">Polling Frequencey Low</string>
    <string name="polling_frequency_low_summary">Interval (seconds) at which to poll location data in battery saving mode.</string>
    <string name="follower_options">Follower Options</string>
    <string name="proximity_far_cat">General Proximity Radius Alert Settings</string>
    <string name="proximity_close_cat">Close Proximity Radius Alert Settings</string>
    <string name="off_route_cat">Off Route Notification Settings</string>
    <string name="alertDistance">Approaching Note Trigger Distance</string>
    <string name="note_alert_cat">Approaching Note Notification Settings</string>
    <string name="feet">feet</string>
    <string name="miles">miles</string>
    <string name="meters">meters</string>
    <string name="kilometers">kilometers</string>
    <string name="delete">Delete from Device</string>
    <string name="upload">Upload to Cloud</string>
    <string name="stop">Stop</string>
    <string name="create_quick_note">Quick Note</string>
    <string name="qn_left">Turn Left</string>
    <string name="qn_right">Turn Right</string>
    <string name="qn_straight">Go Straight</string>
    <string name="note_notification_title">Trail Note in \u0025s</string>
    <string name="strayed_notification_content">distance to path is \u0025s</string>
    <string name="dist_bearing_string">\u0025s \u0025s of you.</string>
    <string name="action_list">List</string>
    <string name="action_filter">Filter</string>
    <string name="follow">Follow</string>
    <string name="map_category_title">Map Settings</string>
    <string name="waiting_for_location_title">Error: No Location</string>
    <string name="waiting_for_location_message">No location</string>
    <string name="OK">OK</string>
    <string name="waiting_for_location">Waiting for location</string>
    <string name="to_start">Go to Start</string>
    <string name="info_no_paths_downloaded_message">To follow a trail, you must first download it locally.  Use the map to search for your trail.</string>
    <string name="info_no_paths_downloaded_title">No Paths to Follow</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_note_notification">TrailBook</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_notification_note">NotificationNoteActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="following_trail_title">Following \u0025s</string>
    <string name="leading_trail_title">Leading \u0025s</string>
    <string name="following_trail_notification_content">Trailbook is tracking your location to keep you on course.</string>
    <string name="exit_confirm">Exit</string>
    <string name="exit_confirm_lead_mesage">This action will stop recording the path.  You can resume leading later by re-entering Trailbook.</string>
    <string name="exit_confirm_follow_mesage">By exiting you will no longer receive alerts when you get off course.</string>
    <string name="confirm_exit_title">Exit?</string>
    <string name="no_network_title">No Network Connectivity</string>
    <string name="no_network_message">Network connectivity is required for this operation.  Please try again later.</string>
    <string name="no_network_toast">No network access.  Showing only your trails.</string>
    <string name="upload_completed">Upload completed</string>
    <string name="upload_failed">Upload failed</string>
    <string name="edit">Edit</string>
    <string name="edit_lowercase">edit</string>
    <string name="select_location_first">First select a point on the path.  Then add note.</string>
    <string name="parse_error">Import Error</string>
    <string name="parse_error_message">There was a problem importing the file.  Make sure it is a google earth KML file (not KMZ) with only one path.</string>
    <string name="path_exists">Path \u0025s already exists</string>
    <string name="path_exists_message">Could not import the path \u0025s because the name is already used.  Please change the name or delete the previous path.</string>
    <string name="gallery">Gallery</string>
    <string name="create_climb_name">Name</string>
    <string name="create_climb_grade">Grade</string>
    <string name="create_climb_description">Description</string>
    <string name="create_climb_rack">Rack</string>
    <string name="create_climb_type">Type</string>
    <string name="create_climb">Add Climb</string>
    <string name="action_create_note">Add Note</string>
    <string name="action_create_climb">Add Climb</string>
    <string name="More">More</string>
    <string name="zoom">Zoom</string>
    <string name="follow_button_text">Follow</string>
    <string name="download">Download</string>
    <string name="go_to_start">Go to Start</string>
    <string name="resume">Resume Leading</string>
    <string name="delete_from_cloud">Delete from Cloud</string>
    <string name="info_no_paths_within_view_title">No Paths in View</string>
    <string name="no_paths_within_view_message">Widen the zoom to find paths.</string>
    <string name="refresh">Refresh from Cloud</string>
    <string name="share">Email</string>
    <string name="editing_message">Editing \u0025s</string>
    <string name="leading_message">Leading  \u0025s</string>
    <string name="following_message">Following  \u0025s</string>
    <string name="done">Done</string>
    <string name="leading_trail_notification_content">Trailbook is recording your location</string>
    <string name="paused_title">Paused</string>
    <string name="paused_content">Trailbook is not recording your location</string>
    <string name="location_updates_paused">PAUSED</string>
    <string name="crash_toast_text">Splat!  Trail Book just decked!</string>
    <string name="cut">Cut</string>
    <string name="pitch_count_label">Pitches</string>
    <string name="rack_label">Rack</string>
    <string name="sample_rack">single set small stuff to #3 camalot then triple old sized  #4, triple old sized #4.5 and single old sized #5.  2 ropes for descent</string>
    <string name="sample_pitch2">5.10+ Enduro OW chickenwing/hand stack or lieback 150ft or so to some truly bad rusty button head bolts at the notch.</string>
    <string name="sample_pitch3">5.5 climb choss to tunnel thru to easy climbing to a spectacular summit.</string>
    <string name="sample_descent">From summit, locate anchors to descend to the base of the chimney with 1 rope.  2 rope rappel from fixed sling/nut anchor to the top of pitch 1.  2 ropes to ground</string>
    <string name="add_pitch_description_dialog_title">Add Pitch Descriptions</string>
    <string name="uom_items_us">US (feet/miles)</string>
    <string name="uom_items_metric">Metric (m/km)</string>
    <string name="no_account">Choose Account</string>
    <string name="not_enabled">not enabled</string>
    <string name="comment">Comment</string>
    <string name="add_comment_dialog_title">Comment on Path</string>
    <string name="ccd_upload_comment">Add Comment</string>
    <string name="set_user_title">Configure User</string>
    <string name="path_uploading">Upload in Progress</string>
    <string name="download_completed">Download completed</string>
    <string name="download_completed_for_path">Download completed for path \u0025s</string>
    <string name="title_paths_in_view">Paths in Current Map View</string>
    <string name="title_downloaded_paths">Your Downloaded Paths</string>
    <string name="delete_selection">Delete Point</string>
    <string name="move_selection">Move Selection</string>
    <string name="help">Help</string>
    <string name="mark_end">Mark End of Trail</string>
    <string name="mark_start">Mark Start of Trail</string>
    <string name="path_name">Path Name</string>
    <string name="goes_to_climbs">Goes to Climbs (click to add):</string>
    <string name="goes_to_crags">Goes to crags / cliffs / formations (click to add)</string>
    <string name="user_name_label">User Name</string>
    <string name="anonymous">Anonymous</string>
</resources>