<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/general_settings"
        android:key="general_settings_cat">
        <Preference android:title="User Id"
            android:key="SAVED_USER_ID_DISPLAY"
            android:summary="not set"/>
        <ListPreference android:key="unit_of_measure_pref"
            android:summary="@string/uom_summary"
            android:title="@string/uom"
            android:entries="@array/uom_items"
            android:entryValues="@array/uom_vals"
            android:defaultValue="US"/>
    </PreferenceCategory>
    <PreferenceCategory android:key="off_route_cat"
        android:title="@string/off_route_cat">
        <CheckBoxPreference android:key="enable_offroute_alert"
            android:defaultValue="true"
            android:title="@string/enable_offroute_alert"/>
        <EditTextPreference android:title="@string/off_route_distance"
            android:key="off_route_distance_pref"
            android:summary="@string/off_route_distance_summary"
            android:numeric="integer"
            android:defaultValue="75"
            android:dependency="enable_offroute_alert"/>
        <RingtonePreference android:showSilent="true"
            android:summary="@string/off_route_ringtone_summary"
            android:key="off_route_alert"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:defaultValue="content://settings/system/notification_sound"
            android:title="@string/off_route_alert"
            android:dependency="enable_offroute_alert"/>
    </PreferenceCategory>
    <PreferenceCategory  android:key="note_alert_cat"
        android:title="@string/note_alert_cat">
        <CheckBoxPreference android:key="enable_prox_2"
            android:defaultValue="true"
            android:summary="@string/enable_prox_alert_summary_2"
            android:title="@string/enable_prox_alert_2"/>
        <EditTextPreference android:defaultValue="60"
            android:key="triggerRadiusClose"
            android:title="@string/alertDistance"
            android:dependency="enable_prox_2"
            android:numeric="integer"/>
        <RingtonePreference android:ringtoneType="notification"
            android:showDefault="true"
            android:title="@string/ringtone_title_2"
            android:showSilent="true"
            android:key="ringtoneClose"
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="enable_prox_2"
            android:summary="@string/ringtone_2"/>
    </PreferenceCategory>
    <PreferenceCategory android:key="map_cat"
        android:title="@string/map_category_title">
        <ListPreference
            android:title="Map Type"
            android:key="map_type_pref"
            android:defaultValue="SATELLITE"
            android:entries="@array/mapTypes"
            android:entryValues="@array/mapTypeValues" />

    </PreferenceCategory>

</PreferenceScreen>