<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name_label"
            android:id="@+id/tv_label_user_name"
            android:layout_column="0"
            android:layout_row="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/anonymous"
            android:ems="10"
            android:id="@+id/sud_et_user_name"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="User Id "
            android:id="@+id/tv_label_login_id"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="sample@gmail.com"
            android:id="@+id/sud_login_id"
            android:layout_row="1"
            android:layout_column="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sud_b_pick_account"
            android:src="@drawable/google_plus2"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:maxWidth="100dp"
            android:layout_span="2"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_vertical"
            android:layout_columnSpan="1" />
    </GridLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cn_cancel"
            android:id="@+id/sud_b_cancel" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:id="@+id/sud_b_ok" />

    </LinearLayout>

</LinearLayout>