<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill|top"
    android:orientation="vertical" >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_climb_name"
            android:id="@+id/cc_tv_name" />

        <EditText
            android:id="@+id/cc_et_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:hint="@string/climb_name_hint"
            android:layout_gravity="top|left">

            <requestFocus />
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_climb_grade"
            android:id="@+id/cc_tv_grade" />

        <EditText
            android:id="@+id/cc_et_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:layout_gravity="top|left">
        </EditText>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/grading_systems"
            android:id="@+id/cc_spinner_grade_system" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/create_climb_description"
                android:id="@+id/cc_tv_description" />
            <EditText
                android:id="@+id/cc_et_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:layout_gravity="top|left">
            </EditText>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Pitches"
            android:id="@+id/cc_tv_pitch_count" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/cc_et_pitch_count"
            android:width="@dimen/pitch_count_edit_width" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Pitch Descriptions"
            android:id="@+id/cc_b_add_pitch_descriptions" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_climb_rack"
            android:id="@+id/cc_tv_rack" />
        <EditText
            android:id="@+id/cc_et_rack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:layout_gravity="top|left">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_climb_type"
            android:id="@+id/cc_tv_type" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cc_spinner_type"
            android:entries="@array/climb_type"
            android:layout_weight="1" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/cn_image_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0">

        <ImageView
            android:id="@+id/cn_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@android:drawable/screen_background_dark" />
        <ImageView
            android:id="@+id/swipe_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/swipe_left_3" />

        <ImageView
            android:id="@+id/swipe_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/swipe_right_3" />
    </RelativeLayout>

    <LinearLayout
        android:background="@color/PanelBackgroundColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="false"
        android:gravity="top">

        <Button
            style="@style/btnStyleBeige"
            android:id="@+id/cn_b_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cn_cancel"
            android:gravity="center"
            android:layout_weight=".33" />

        <Button
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:id="@+id/cn_b_delete"
            android:layout_weight=".33" />

        <Button
            style="@style/btnStyleOlive"
            android:id="@+id/cn_b_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cn_ok"
            android:layout_weight=".34" />

    </LinearLayout>

</LinearLayout>