<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill|top"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/cn_note_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/trailNotesHint"
        android:layout_gravity="top|left">

        <requestFocus />
    </EditText>



    <RelativeLayout
        android:id="@+id/cn_image_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0">
    <ImageView
        android:id="@+id/cn_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@android:drawable/screen_background_dark" />
    <ImageView
        android:id="@+id/swipe_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/swipe_left_3" />

    <ImageView
        android:id="@+id/swipe_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/swipe_right_3" />
    </RelativeLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:background="@color/PanelBackgroundColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="false"
        android:gravity="top">

        <Button
            style="@style/btnStyleBeige"
            android:id="@+id/cn_b_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cn_cancel"
            android:gravity="center"
            android:layout_weight=".33" />

        <Button
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:id="@+id/cn_b_delete"
            android:layout_weight=".33"/>

        <Button
            style="@style/btnStyleOlive"
            android:id="@+id/cn_b_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cn_ok"
            android:layout_weight=".34"/>

    </LinearLayout>
</LinearLayout>